@@ -1,5 +1,9 @@
 [2009--] 1.1.1
 + Added Dwoo::setTemplate() for testing purposes mostly
+* Fixed a security issue, if you didn't use a custom compiler factory but
+  passed the compiler directly to the get method with autoEscape enabled,
+  the autoEscape was disabled in included templates - Thanks to Fabien 
+  Potencier for notifying me.
 
 [2009-07-18] 1.1.0
 ! BC Break: Dwoo::initGlobals() is only called once during the Dwoo object
